crates/graphql-orm/tests/ui/projection_unknown_field.stderr
error: projection `UnknownProjection` references unknown field `other_entity_field` on `Item`
 --> tests/ui/projection_unknown_field.rs:6:8
  |
6 | struct Item {
  |        ^^^^
